--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_quiz"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     tools:context="com.bignerdranch.android.geoquiz.QuizActivity">
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
 
         <Button
@@ -33,27 +33,22 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/prev_button"
+        android:text="@string/prev_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="bottom|left"
+        android:drawableLeft="@drawable/arrow_left"
+        android:drawablePadding="4dp"/>
 
-        <Button
-            android:id="@+id/prev_button"
-            android:text="@string/prev_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrow_left"
-            android:drawablePadding="4dp"/>
+    <Button
+        android:id="@+id/next_button"
+        android:text="@string/next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:drawableRight="@drawable/arrow_right"
+        android:drawablePadding="4dp"/>
 
-        <Button
-            android:id="@+id/next_button"
-            android:text="@string/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/arrow_right"
-            android:drawablePadding="4dp"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
