--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -23,32 +23,39 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button"/>
+            android:text="@string/true_button" />
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/false_button"/>
+            android:text="@string/false_button" />
 
     </LinearLayout>
 
     <Button
         android:id="@+id/prev_button"
-        android:text="@string/prev_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|left"
         android:drawableLeft="@drawable/arrow_left"
-        android:drawablePadding="4dp"/>
+        android:drawablePadding="4dp"
+        android:text="@string/prev_button" />
+
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button" />
 
     <Button
         android:id="@+id/next_button"
-        android:text="@string/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
+        android:drawablePadding="4dp"
         android:drawableRight="@drawable/arrow_right"
-        android:drawablePadding="4dp"/>
+        android:text="@string/next_button" />
 
 </FrameLayout>
