--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,8 +4,8 @@
     android:id="@+id/activity_quiz"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.bignerdranch.android.geoquiz.QuizActivity">
 
     <TextView
@@ -23,15 +23,21 @@
             android:id="@+id/true_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/true_button"/>
+            android:text="@string/true_button" />
 
         <Button
             android:id="@+id/false_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/false_button"/>
+            android:text="@string/false_button" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -40,19 +46,19 @@
 
         <Button
             android:id="@+id/prev_button"
-            android:text="@string/prev_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/arrow_left"
-            android:drawablePadding="4dp"/>
+            android:drawablePadding="4dp"
+            android:text="@string/prev_button" />
 
         <Button
             android:id="@+id/next_button"
-            android:text="@string/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawablePadding="4dp"
             android:drawableRight="@drawable/arrow_right"
-            android:drawablePadding="4dp"/>
+            android:text="@string/next_button" />
 
     </LinearLayout>
 
